# WhatsMyNote

./: .env.sample  .gitignore  CHANGELOG.md  README.md  WhatsMyNoteDB.session.sql  cli.py  generate_frames.py  graph.py  llms.py  main.py  pyproject.toml  sample.env  test_layout.py  test_logo.py  test_replace.py
.github/workflows/: release.yml  render-deploy-staging.yml  render-deploy.yml
agents/: extractor.py
agents/prompts/create/: account.md  budget.md  income.md  lending.md
agents/prompts/delete/: account.md  lending.md  transfer.md
agents/prompts/query/: account.md  expense.md  lending.md
agents/prompts/update/: account.md  expense.md  income.md  lending.md
analytics/: executor.py  models.py  planner.py  schema_context.py  validator.py
analytics/prompts/: sql.md
app/: auth.py  chat.py  main.py  render.py  setup.py
backend/: llms.py  main.py
backend/agents/: __init__.py  analytics.py  classifier.py  extractor.py
backend/analytics/: executor.py  models.py  planner.py  schema_context.py  validator.py  verifier.py
backend/analytics/prompts/: sql.md
backend/budget/: alerts.py
backend/core/: __init__.py  config.py  graph.py  memory.py  paths.py  state.py
backend/db/: config.py  create_tables.py  schema.py
backend/records/: account_utils.py  deleter.py  query.py  resolver.py  saver.py  search.py  updater.py
backend/records/models/: __init__.py  account.py  budget.py  common.py  expense.py  income.py  lending.py  transfer.py
budget/: __init__.py  alerts.py
core/: config.py  graph.py  memory.py  state.py
db/: config.py  create_tables.py  models.py  schema.py
docs/: analytics.md  budget_and_analytics.md  components.md  core_concepts.md  data_model.md  database.md  extraction_schema.md  getting_started.md  mvp_plan.md  system_flow.md
docs/features/: accounts.md  budgets.md  expenses.md  income.md  lending.md  transfers.md
models/: create_record_model.py  delete_record_model.py  query_plan_model.py  selectors.py  state.py  update_record_model.py
nodes/: analytics_detector.py  intent_classifier.py  response_formatter.py
nodes/extractors/: create_record_extractor.py  delete_record_extractor.py  query_extractor.py  update_record_extractor.py
nodes/writers/: record_updater.py
prompts/: extract_create_record.md  extract_query.md
records/: __init__.py  delete_last.py  deleter.py  normalization.py  resolver.py  saver.py  search.py  updater.py
records/account/: deleter.py  extractor.py  models.py  query_executor.py  resolver.py  saver.py  updater.py
records/account/prompts/: create.md  delete.md  query.md  update.md
records/budget/: deleter.py  extractor.py  models.py  query_executor.py  resolver.py  saver.py  updater.py
records/budget/prompts/: create.md  delete.md  query.md  update.md
records/expense/: deleter.py  extractor.py  models.py  query_executor.py  resolver.py  saver.py  updater.py
records/expense/prompts/: create.md  delete.md  query.md  update.md
records/income/: deleter.py  extractor.py  models.py  query_executor.py  resolver.py  saver.py  updater.py
records/income/prompts/: create.md  delete.md  query.md  update.md
records/lending/: deleter.py  extractor.py  models.py  query_executor.py  resolver.py  saver.py  updater.py
records/lending/prompts/: create.md  delete.md  query.md  update.md
records/models/: account.py  expense.py  income.py
records/transfer/: deleter.py  extractor.py  models.py  query_executor.py  resolver.py  saver.py  updater.py
records/transfer/prompts/: create.md  delete.md  query.md  update.md
services/: query_executor.py  record_deleter.py  record_resolver.py  record_saver.py  record_updater.py
whatsmynote-old/app/: chat.py  render.py  selector.py
whatsmynote/app/: __init__.py  auth.py  chat.py  config.py  main.py  setup.py  tui.py
(+24 files in other folders)
