[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["whatsmynote*"]

[project]
name = "whatsmynote"
version = "0.1.3"
description = "A CLI app for managing notes and finances using LLMs."
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Sarthak Jha", email = "sargedevx@gmail.com" }
]
license = { text = "MIT" }
keywords = ["cli", "llm", "finance", "notes"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "python-dotenv>=0.9.9",
    "inquirerpy>=0.3.4",
    "plotext>=5.3.2",
    "rich>=13.9.4",
    "termcharts>=1.1.2",
    "platformdirs>=4.2.2",
    "supabase>=2.3.0",
    "requests>=2.31.0",
    "fastapi[standard]>=0.139.0",
    "uvicorn>=0.51.0",
    "twine>=6.2.0",
    "langsmith>=0.10.2",
    "sentry-sdk[fastapi]>=2.11.0",
]

[project.urls]
Homepage = "https://github.com/SarJ2004/WhatsMyNote"
Repository = "https://github.com/SarJ2004/WhatsMyNote"

[project.scripts]
whatsmynote = "whatsmynote.app.main:main"

[dependency-groups]
dev = [
    "langgraph>=0.2.6",
    "langchain-groq>=0.2.1",
    "sqlalchemy>=2.0.36",
    "psycopg2-binary>=2.9.10",
]

# Trigger PyPI release for v0.1.0
